@@ -1,12 +1,12 @@
 /*
  * Copyright 2015 Adaptris Ltd.
- * 
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * 
+ *
  *     http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -18,17 +18,16 @@ package com.adaptris.core.services.jdbc.types;
 
 import java.io.IOException;
 import java.sql.SQLException;
-
 import com.adaptris.jdbc.JdbcResultRow;
 import com.thoughtworks.xstream.annotations.XStreamAlias;
 
 /**
  * Column Translator implementation for handling double types
- * 
+ *
  * @config jdbc-type-double-column-translator
- * 
+ *
  * @author lchan
- * 
+ *
  */
 @XStreamAlias("jdbc-type-double-column-translator")
 public class DoubleColumnTranslator extends FormattableColumnTranslator {
@@ -45,18 +44,18 @@ public class DoubleColumnTranslator extends FormattableColumnTranslator {
   public String translate(JdbcResultRow rs, int column) throws SQLException, IOException {
     Object doubleObject = rs.getFieldValue(column);
     if(doubleObject instanceof Double)
-      return toString((Double) rs.getFieldValue(column));
+      return toString(rs.getFieldValue(column));
     else
-      return toString(new Double(rs.getFieldValue(column).toString()));
+      return toString(Double.valueOf(rs.getFieldValue(column).toString()));
   }
 
   @Override
   public String translate(JdbcResultRow rs, String column) throws SQLException, IOException {
     Object doubleObject = rs.getFieldValue(column);
     if(doubleObject instanceof Double)
-      return toString((Double) rs.getFieldValue(column));
+      return toString(rs.getFieldValue(column));
     else
-      return toString(new Double(rs.getFieldValue(column).toString()));
+      return toString(Double.valueOf(rs.getFieldValue(column).toString()));
   }
 
 }
